--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -1,10 +1,23 @@
 - name: Install Nginx
   ansible.builtin.apt:
     name: nginx
-    update_cache: yes
+    update_cache: yes #apt-get update
+    state: present
 
 - name: Copy index.html to vm
   ansible.builtin.copy:
     src: index.html
     dest: "{{ web_root }}/index.html"
-# - name: Deploy Nginx config
+
+- name: Deploy Nginx config
+  ansible.builtin.template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/sites-available/frontend
+  notify: Reload nginx
+
+- name: Enable site
+  ansible.builtin.file:
+    src: /etc/nginx/sites-available/frontend
+    dest: /etc/nginx/sites-enabled/frontend
+    state: link
+  notify: Reload nginx
