remove default nginx resolve conflict

--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -21,3 +21,9 @@
     dest: /etc/nginx/sites-enabled/frontend
     state: link
   notify: Reload nginx
+
+- name: Remove default nginx site
+  ansible.builtin.file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
+  notify: Reload nginx
