--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory/private.yml
+inventory = ./inventory/main.yml
 remote_user = ubuntu
 private_key_file = ~/.ssh/ansible_test.pem
 host_key_checking = False
